# qmd

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CLINICAL.md  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  autoresearch.jsonl  bun.nix  debug-embed.js  docker-compose.yml  example-index.yml  flake.nix  migrate-schema.ts  mlx_backend.py  package.json  plan.md  pnpm-lock.yaml  pr288-reference.patch  qmd  qmd.ts  requirements.txt  run-embed-direct.js  status.md  test_mlx_backend.py  tsconfig.build.json  tsconfig.json  vitest.config.ts
.claude-plugin/: marketplace.json
benches/: search_bench.rs
clinical/: schema.md
completions/: qmd.bash
crate/: chunking.rs  cli.rs  collections.rs  context.rs  db.rs  formatter.rs  lib.rs  llm.rs  main.rs  search.rs  store.rs
docker/: Dockerfile
docs/: FREEBSD.md  LLM_USAGE.md  README.md  REMOTE_MODE.md  SYNTAX.md  auto-update.md  embedding-benchmark.md  linuxbrew-issue.md  modal-inference-backend-design.md  modal-inference-plan.md  modal-latency.md  qmd-remote-llm-port.md  remote-endpoints.md
finetune/: CLAUDE.md  README.md  convert_onnx.py  reward.py  train.py
finetune-mlx/: .gitignore  README.md  convert.py  demo.py  eval.py  grpo.py  prepare_data.py  requirements.txt  reward.py  train.py
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
modal/: Dockerfile.llama-server  requirements.txt  serve.py
nix/: README.md  bun.nix  node-llama-cpp-detectGlibc.patch  package-lock.json  package.nix
src/: api.ts  (+64 more)
(+279 files in other folders)
