[package]
name = "qmd"
version = "1.1.5"
edition = "2024"
description = "On-device hybrid search for markdown files with BM25, vector search, and LLM reranking"
license = "MIT"
repository = "https://github.com/tobi/qmd"

[[bin]]
name = "qmd-rs"
path = "crate/main.rs"

[lib]
name = "qmd"
path = "crate/lib.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Database
rusqlite = { version = "0.34", features = ["bundled-full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime (for MCP HTTP server)
tokio = { version = "1", features = ["full"] }

# File system
glob = "0.3"
globset = "0.4"
walkdir = "2"
ignore = "0.4"

# Hashing
sha2 = "0.10"

# Error handling
anyhow = "1"
thiserror = "2"

# Output
colored = "3"
indicatif = "0.17"

# Misc
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
regex = "1"

[dev-dependencies]
tempfile = "3.26.0"
